crates/dekaf/tests/snapshots/e2e_epoch_reporting__list_offsets_epoch.snap
---
source: crates/dekaf/tests/e2e_epoch_reporting.rs
assertion_line: 177
expression: snapshot
---
{
  "earliest": {
    "leader_epoch": 1,
    "offset_valid": true
  },
  "latest": {
    "leader_epoch": 1,
    "offset_valid": true
  },
  "partition": 0,
  "topic": "test_topic"
}
